* Adjusted instruction set

Version 1.0.0 2020-09-16
    * Hello World