@@ -1,3 +1,4 @@
+* Improved callback inheritance
 * Adjusted instruction set
 
 Version 1.0.0 2020-09-16
